# PressureMonitor

./: CMakeLists.txt  compile_commands.json
Documentation/: Class Diagram.key  Demo 12-9-21.html  Demo 12-9-21.md  Skerl box hardware proposal.drawio  SkerlBox ClassDiagram.html  SkerlBox ClassDiagram.md
SkerlBoxGui/HeaderWidget/: CMakeLists.txt  digitaloutdisplay.cpp  digitaloutdisplay.hpp  digitaloutdisplay.ui  headerwidget.cpp  headerwidget.hpp  headerwidget.ui  main.cpp  timeupdater.cpp  timeupdater.hpp
SkerlBoxGui/build-HeaderWidget-Desktop_Qt_5_14_1_clang_64bit-Debug/: CMakeCache.txt  HeaderWidget  HeaderWidget.cbp  Makefile  cmake_install.cmake
SkerlBoxGui/build-HeaderWidget-Desktop_Qt_5_14_1_clang_64bit-Debug/.cmake/api/v1/reply/: cache-v2-eebed708e3b65c651d25.json  cmakeFiles-v1-fa1d3b00db3a3d410a88.json  codemodel-v2-b63176ae1a90ddeea323.json  index-2021-10-25T14-40-00-0302.json  target-HeaderWidget-Debug-61a7d92cd3df5483aa7c.json  target-HeaderWidget_autogen-Debug-0ca579a3b528e94201fb.json
SkerlBoxGui/build-HeaderWidget-Desktop_Qt_5_14_1_clang_64bit-Debug/HeaderWidget_autogen/EWIEGA46WW/: moc_headerwidget.cpp  moc_timeupdater.cpp
SkerlBoxGui/build-HeaderWidget-Desktop_Qt_5_14_1_clang_64bit-Debug/HeaderWidget_autogen/include/: ui_headerwidget.h
SkerlBoxGui/build-HeaderWidget-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  HeaderWidget.cbp  Makefile  cmake_install.cmake
SkerlBoxGui/build-HeaderWidget-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-5058c5a617c890183f75.json  cmakeFiles-v1-bac387048c7c93824860.json  codemodel-v2-c26952203b827cc77cf6.json  index-2021-10-25T13-23-04-0873.json  target-HeaderWidget-Debug-34a5e60ecfc7ed971121.json  target-HeaderWidget_autogen-Debug-7aab227df38735e2a581.json
SkerlBoxGui/build-HeaderWidget-Desktop_x86_darwin_generic_mach_o_64bit-Debug/HeaderWidget_autogen/: moc_predefs.h  mocs_compilation.cpp
SkerlBoxGui/build-HeaderWidget-Desktop_x86_darwin_generic_mach_o_64bit-Debug/HeaderWidget_autogen/EWIEGA46WW/: moc_digitaloutdisplay.cpp
SkerlBoxGui/build-HeaderWidget-Desktop_x86_darwin_generic_mach_o_64bit-Debug/HeaderWidget_autogen/include/: ui_headerwidget.h
include/: .MccDio96H.hpp.swo  .MccDio96H.hpp.swp  .Ruska.hpp.swo  .Ruska.hpp.swp  .iDIO.hpp.swo  .iDIO.hpp.swp  .iSerial.hpp.swp  DummyDevice.hpp  DummyObserver.hpp  MccDio96H.hpp  Observer.hpp  Ruska.hpp  RuskaObserver.hpp  Serial.hpp  ancillary.hpp  bcd.hpp  iDioObserver.hpp  iObservableDevice.hpp
src/: .MccDio96H.cpp.swo  .MccDio96H.cpp.swp  .Ruska.cpp.swo  .Ruska.cpp.swp  .iDIO.cpp.swp  .iDevice.cpp.swp  DummyDevice.cpp  DummyObserver.cpp  MccDio96H.cpp  Observer.cpp  Ruska.cpp  RuskaObserver.cpp  Serial.cpp  ancillary.cpp  bcd.cpp  dioTest.cpp  helper.cpp  iDioObserver.cpp  iObservableDevice.cpp  main.cpp  mccH96Test.cpp  ruskaTest.cpp  sandbox.cpp  serialTest.cpp
